Fixed account picture alignment

--- a/app/sass/modules/_chatbar.sass
+++ b/app/sass/modules/_chatbar.sass
@@ -44,3 +44,4 @@
 .chat-user .account__picture
     width: 24px
     height: 24px
+    vertical-align: middle
